# Livigy-UPS-HAOS-Integration

./: .gitignore  Dockerfile  README.md  config.example.yaml  hacs.json  pyproject.toml
custom_components/livigy_ups/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  parser.py  sensor.py  services.yaml  strings.json
custom_components/livigy_ups/translations/: en.json
dashboards/: livigy_ups_dashboard.yaml
src/livigy_ups_bridge/: main.py  parser.py  publishers.py
tests/: test_parser.py
